--- a/e_commerce_project/Views/Home/Login.cshtml
+++ b/e_commerce_project/Views/Home/Login.cshtml
@@ -9,7 +9,7 @@
                 <div class="card bg-dark text-white" style="border-radius: 1rem;">
                     <div class="card-body p-5 text-center">
 
-                        <form asp-action="Login" method="post">
+                       <form asp-controller="Home" asp-action="Login" method="post">
 
                             <h2 class="fw-bold mb-2 text-uppercase">Login</h2>
                             <p class="text-white-50 mb-4">Please enter your login and password!</p>
